<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pe.edu.utp</groupId>
  <artifactId>CasoVentas2</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>CasoVentas2</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.11</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>com.github.lgooddatepicker</groupId>
        <artifactId>LGoodDatePicker</artifactId>
        <version>10.3.1</version>
    </dependency>
    <dependency>
        <groupId>com.toddfast.typeconverter</groupId>
        <artifactId>typeconverter</artifactId>
        <version>1.0</version>
    </dependency>
    <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>8.0.18</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>pe.edu.utp.App</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
	<groupId>com.akathist.maven.plugins.launch4j</groupId>
	<artifactId>launch4j-maven-plugin</artifactId>
	<version>1.7.25</version>
	<executions>
		<execution>
			<id>l4j-clui</id>
			<phase>package</phase>
			<goals><goal>launch4j</goal></goals>
			<configuration>
				<headerType>console</headerType>
				<outfile>target/casoventas2.exe</outfile>
				<jar>target/CasoVentas2-1.0-SNAPSHOT.jar</jar>
				<errTitle>encc</errTitle>
				<classPath>
					<mainClass>pe.edu.utp.App</mainClass>
					<addDependencies>true</addDependencies>
					<preCp>anything</preCp>
				</classPath>
				<jre>
					<minVersion>1.8</minVersion>
					<opts>
						<opt>-Djava.endorsed.dirs=./endorsed</opt>
					</opts>
				</jre>
				<versionInfo>
					<fileVersion>${launch4jVersion}</fileVersion>
					<txtFileVersion>${launch4jVersion}</txtFileVersion>
					<fileDescription>${project.name}</fileDescription>
					<copyright>MIT</copyright>
					<productVersion>${launch4jVersion}</productVersion>
					<txtProductVersion>${launch4jVersion}</txtProductVersion>
					<productName>${project.name}</productName>
					<originalFilename>${exeFileName}.exe</originalFilename>
					<!-- internalName is mandatory -->
					<internalName>${exeFileName}</internalName>
				</versionInfo>
			</configuration>
		</execution>
	</executions>
    </plugin>
    <!-- Just copy the file in the local bin -->
    <plugin>
	<artifactId>maven-resources-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
		<execution>
			<id>deploy-to-local-directory</id>
			<phase>install</phase>
			<goals>
				<goal>copy-resources</goal>
			</goals>
			<configuration>
				<outputDirectory>${bin.local.path}</outputDirectory>
				<resources>
					<resource>
						<directory>${project.build.directory}</directory>
						<includes>
							<include>*.exe</include>
						</includes>
						<filtering>false</filtering>
					</resource>
				</resources>
			</configuration>
		</execution>
            </executions>
        </plugin>
    </plugins>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
